2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/z180/shift.s,
	  device/lib/r3ka/shift.s,
	  device/lib/z80/shift.s,
	  device/lib/gbz80/shift.s,
	  device/lib/r2k/shift.s,
	  src/port.h,
	  src/z80/gen.c,
	  src/z80/main.c,
	  device/lib/z180/Makefile.in,
	  device/lib/z180/stubs.s,
	  device/lib/r3ka/Makefile.in,
	  device/lib/r3ka/stubs.s,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/stubs.s,
	  device/lib/gbz80/stubs.s,
	  device/lib/gbz80/Makefile.in,
	  device/lib/r2k/Makefile.in,
	  device/lib/r2k/stubs.s:
	  Code generation instead of support calls for all shifts.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Better cost estimation for loading parameters into pairs,
	  more efficient loading from stack into iy for Rabbits.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Use dec r and inc a in comparison for equality.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Use 16-bit sbc in subtraction and comparison.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve handling of pointers to long and long long.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Minor addition improvement,
	  refactoring of pair test code.

2012-06-25 Borut Razem <borut.razem AT gmail.com>

	* src/regression/Makefile:
	  applied patch #3537593 - pic16 regression patch,
	  thanks to Don Wooton

2012-06-24 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/repack_release.sh: updated

2012-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genLeftShiftLiteral): commented out wassert to work
	  around bug 3537338


2012-06-21 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/libdev/devices.txt,